# forg

./: .gitmodules  Cargo.toml  LICENSE  README.md  download_resource_osx.sh  forg.desktop
Forg.app/Contents/: Info.plist
Forg.app/Contents/Resources/: file-manager.icns
Forg.app/Contents/Resources/mime/: globs2
src/: app_global.rs  dialog.rs  icon_source.rs  line_edit.rs  main.rs  models.rs  views.rs
