[package]
name = "forg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gpui = { git = "https://github.com/zed-industries/zed" }
gpui = { path = "./zed/crates/gpui" }
xdg_desktop = { git = "https://github.com/mikeandmore/xdg-desktop.git" }
futures = "0.3"
serde = "1.0.210"
serde_derive = "1.0.210"
unicode-segmentation = "1.12.0"
regex = "1.9.5"
memmap = "0.7.0"
smol = "1.2"
toml = "0.8.19"


[profile.dev]
overflow-checks = false
debug-assertions = false
debug = false
lto = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
