[package]
name = "forg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gpui = { git = "https://github.com/zed-industries/zed" }
gpui = { path = "./zed/crates/gpui" }
# xdg_desktop = { git = "https://github.com/mikeandmore/xdg-desktop.git" }
xdg_desktop = { path = "./xdg-desktop" }
futures = "0.3"
serde = "1.0.210"
serde_derive = "1.0.210"
unicode-segmentation = "1.12.0"
regex = "1.9.5"
memmap = "0.7.0"
smol = "1.2"
toml = "0.8.19"
resvg = { version = "0.44.0", default-features = false }
usvg = { version = "0.44.0", default-features = false }
image = "0.25.1"
smallvec = "1.13.2"

[profile.dev]
overflow-checks = false
debug-assertions = false
debug = false
lto = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
